Update CJ's information

--- a/docs/pets/cj.mdx
+++ b/docs/pets/cj.mdx
@@ -8,22 +8,20 @@ hide_title: true
 
 # CJ
 
-CJ was born July 20 2011 and been a part of Tayler's family since birth. His parents, Chato and Molia, were part of Tayler's grandparents family and also gave CJ two brothers and a sister who stayed in the family, and 5 others that went to other families. He can't hear well anymore
+CJ was born July 20 2011 and been a part of Tayler's family since birth. He is a senior dog with a weak bladder, poor hearing, and smelly farts. 
 
-## Keywords
-- **Walk** - CJ loves walking. He will start jumping around like a youngin when he thinks or knows your intention is to walk him. Be careful he doesn't hurt himself!
-- **Off** - For when you need him to move off of whatever he's on. The couch or whatever
-- **No** - He doesn't really listen to this one a lot
-- **Down** = Lay Down
-- **Paw** - for a paw, good before a treat or before putting his harness on
-- **Treat** = treat
-- ***clicker sound** - _treat incoming_
-
+## Key things
+- Going potty
+  - If CJ's tail raises, he is getting ready to go potty; inside or outside, pee or poop!
+  - Many times a day CJ needs to go pee. On routine, he will go out in the morning, after breakfast, after lunch, before and after dinner, and before bed.
+  - As soon as you get home, CJ will need to go pee. He should also go pee before you leave.
+  - Leave him outside for a few minutes to ensure he has time to decide to go poop. He will come inside and poop without warning.
+- Food
+  - CJ will eat Olympia's food if she hasn't started eating. Make sure he doesn't eat her food
 
 :::important CJ is a senior
 
 While his hips are in decent shape, his back is noticably an area of discomfort for him. Avoid situations where dogs attempt to mount him which hurts his back and can make CJ very upset.
-He also can't hear very well.
 
 :::
 
