Add .vscode/settings.json with cSpell.words configuration Update technology.mdx with revised Alexa commands Update emergency.mdx with vet information Update authors.yml with Tayler's profile picture Update intro.mdx with corrected formatting Update routine.mdx with corrected information about Olympia's harness Update package.json with updated dependencies Add blog post for April 2024 about CJ's diet Update accidents.mdx with revised instructions for cleaning up pet accidents

--- a/docs/emergency.mdx
+++ b/docs/emergency.mdx
@@ -14,12 +14,8 @@ The REI card is the best for emergencies, but the others are available if needed
 
 ## Vet Information
 
-Oregon vets with the pet info:
-Cascade Animal Clinic - 541-343-8794
-
 Berkeley Dog and Cat Hospital - 510-848-5041
 Address: 2126 Haste St, Berkeley, CA 94704
-
 
 
 ## Scout Missing?
@@ -28,7 +24,7 @@ Places to check:
 
 - Under the desks in office
 - Behind the Piano
-- Under the guest room bed (behind it)
+- Under the beds (or behind)
 - In the bathtub
 - In a closet
 - Behind the TV
