--- a/docs/house/accidents.mdx
+++ b/docs/house/accidents.mdx
@@ -10,7 +10,7 @@ On occassion the pets (mostly CJ) may have an accident.
 
 We have a Green Machine carpet cleaner that you can use if you need to. It floats around the house, but is usually family room near the fireplace. There is already pet cleanup formula in there probably; there is more under a sink if needed. It is pretty easy to use, but if you have any questions, just ask!
 
-We recommend using that to vaccuum up any liquid first, then using the trigger on the vaccuum to spray cleaning spray on the area, then using the vaccuum again to suck up the cleaning spray.
+We recommend picking up any solids first of course, then using the green machine to vaccuum up any liquid, then using the trigger on the vaccuum to spray cleaning spray on the area, then using the vaccuum again to suck up the cleaning spray.
 
 Towels above the washer/dryer are dedicated to pets and their messes.
 
