--- a/docs/human-care/technology.mdx
+++ b/docs/human-care/technology.mdx
@@ -38,7 +38,7 @@ There are 4 devices in the house:
 
 - Alexa, turn on the lights.
 - Alexa, goodnight.
-- Alexa, play music around the house.
+- Alexa, play music everywhere.
 - Alexa, set an alarm for 8am.
 
 :::
