--- a/docs/pets/cj.mdx
+++ b/docs/pets/cj.mdx
@@ -22,7 +22,7 @@ CJ was born July 20 2011 and been a part of Tayler's family since birth. His par
 
 :::important CJ is a senior
 
-While his hips are in decent shape, his back is noticably an area of discomfort for him. Avoid situations where dogs attempt to mount him which hurts his back and can make CJ very upset.
+While his hips are starting to really fail him, his back is noticably an area of discomfort for him. Avoid situations where dogs attempt to mount him which hurts his back and can make CJ very upset.
 He also can't hear very well.
 
 :::
@@ -38,8 +38,7 @@ We have experienced a few incidents with CJ during a strenous activity where he 
 ## Barking
 
 ### Backyard
-<i class="fa-solid fa-triangle-exclamation"></i> 
-CJ will often bark into the wind; letting everyone know he's awake. This will cause the neighbors dog to bark but he doesn't appear to notice unless Olympia is barking too.
+<i class="fa-solid fa-triangle-exclamation"></i> CJ will often bark into the wind; letting everyone know he's awake. This will cause the neighbors dog to bark but he doesn't appear to notice unless Olympia is barking too.
 
 ### Inside
 CJ is actually really good about not looking for things to bark at while inside. He will begin barking when someone knocks at the door and can look very agressive to anyone who is at the door. He also barks when Olympia begins any sort of barking noises. Even if Olympia isn't barking at anything
