--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -42,5 +42,5 @@ CJ has bitten people that have _not_ greeted us while they walk past. Not often,
 :::
 
 ### Olympia
-Olympias harness is Turquoise. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
+Olympias harness is black. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
 When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk! She usually wants to go into the backyard to pee immediately after a walk if she didn't go while out.
