--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -8,12 +8,10 @@ title: The Basics
   Don't let Scoutie outside <i class="fa-solid fa-cat"></i>
 </li>
 <li>
-  Make sure Scoutie can access her litterbox{' '}
-  <i class="fa-solid fa-poo"></i>
+  Make sure Scoutie can access her litterbox{' '} <i class="fa-solid fa-poo"></i>
 </li>
 <li>
-  Don't let the dogs have access Scoutie's litterbox{' '}
-  <i class="fa-solid fa-poop"></i>
+  Don't let the dogs have access Scoutie's litterbox{' '} <i class="fa-solid fa-poop"></i>
 </li>
 <li>
   Keep CJs heart rate down <i class="fa-solid fa-heart"></i>
