Refactor component and data

--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -14,7 +14,7 @@ These are the pets
 <PetCard
   name="CJ"
   href="/docs/pets/cj"
-  imagePath="/img/cj.png"
+  image="/img/cj.png"
   displayBreed={true}
   displayBirthday={true}
 >
@@ -27,7 +27,7 @@ These are the pets
 <PetCard
   name="Olympia"
   href="/docs/pets/olympia"
-  imagePath="/img/olympia.jpg"
+  image="/img/olympia.jpg"
   displayBreed={true}
   displayBirthday={true}
   children="Our little monster was born September 2018. She makes funny sounds and
@@ -38,7 +38,7 @@ These are the pets
 <PetCard
   name="Scout"
   href="/docs/pets/scout"
-  imagePath="/img/scout.jpg"
+  image="/img/scout.jpg"
   displayBreed={true}
   displayBirthday={true}
 >
