--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -4,8 +4,6 @@ hide_title: true
 ---
 
 import PetCard from "@site/src/components/PetCard";
-
-import styles from "@site/src/pages/index.module.css";
 import { petsData } from "@site/src/data/pets";
 import { getPetData } from "@site/src/util/getPetData";
 
@@ -13,42 +11,30 @@ import { getPetData } from "@site/src/util/getPetData";
 
 These are the pets
 
-<div className="container">
-  <div className="grid grid-cols-2 justify-center gap-8">
-    {/* <PetCard
-    name="CJ"
-    href="/docs/pets/cj"
-    image="/img/cj.png"
+<div class="tabs flex" style={{ fontWeight: "unset" }}>
+  <PetCard
+    name="Olympia"
+    href="/docs/pets/olympia"
+    image="/img/olympia.jpg"
+    breed={getPetData("Olympia", "breed")}
+    birthday={getPetData("Olympia", "birthday")}
   >
-    CJ was born July 20 2011 and been a part of Tayler's family since birth.
-    His parents, Chato and Molia, were part of Tayler's grandparents family
-    and also gave CJ two brothers and a sister who stayed in the family, and
-    5 others that went to other families.
-  </PetCard> */}
-    <PetCard
-      name="Olympia"
-      href="/docs/pets/olympia"
-      image="/img/olympia.jpg"
-      breed={getPetData("Olympia", "breed")}
-      birthday={getPetData("Olympia", "birthday")}
-    >
-      Our little monster was born September 2018. She makes funny sounds and can
-      have a ton of energy. We know that she is just the perfect little dog.
-      Just over 45 pounds of pure muscle, don't let her crash into your legs at
-      top speed. And watch for her jumping up to lick your face!
-    </PetCard>
-    <PetCard
-      name="Scout"
-      href="/docs/pets/scout"
-      image="/img/scout.jpg"
-      breed={getPetData("Scout", "breed")}
-      birthday={getPetData("Scout", "birthday")}
-    >
-      Scout was born in 2016 in a truck yard in Southern California. She came to
-      our family as a tiny tiny cat and always ruled the house, until CJ came
-      along. She's social and curious, but has entirely a type-A personality.
-      Belly rubs are requested, she rewards belly rubs with scratches and
-      friendly bites.
-    </PetCard>
-  </div>
+    Our little monster was born September 2018. She makes funny sounds and can
+    have a ton of energy. We know that she is just the perfect little dog. Just
+    over 45 pounds of pure muscle, don't let her crash into your legs at top
+    speed. And watch for her jumping up to lick your face!
+  </PetCard>
+  <PetCard
+    name="Scout"
+    href="/docs/pets/scout"
+    image="/img/scout.jpg"
+    breed={getPetData("Scout", "breed")}
+    birthday={getPetData("Scout", "birthday")}
+  >
+    Scout was born in 2016 in a truck yard in Southern California. She came to
+    our family as a tiny tiny cat and always ruled the house, until CJ came
+    along. She's social and curious, but has entirely a type-A personality.
+    Belly rubs are requested, she rewards belly rubs with scratches and friendly
+    bites.
+  </PetCard>
 </div>
