Updates for no more CJ

--- a/docs/emergency.mdx
+++ b/docs/emergency.mdx
@@ -12,22 +12,18 @@ hide_title: true
 There are several Credit Cards available in the desk drawer for pet emergencies <i class="fa-solid fa-cat"></i>
 The REI card is the best for emergencies, but the others are available if needed.
 
+Feel free to call us!
+
 ## Vet Information
 
 Berkeley Dog and Cat Hospital - 510-848-5041
 Address: 2126 Haste St, Berkeley, CA 94704
 
+:::warning Looking for Scout?
+[See if she's in any of her usual spots](/docs/pets/scout)
+:::
 
-## Scout Missing?
+:::info Looking for Accidents?
+[Did someone have an accident inside?](/docs/house/accidents)
 
-Places to check:
-
-- Under the desks in office
-- Behind the Piano
-- Under the beds (or behind)
-- In the bathtub
-- In a closet
-- Behind the TV
-
-:::info [Looking for Accidents?](/docs/house/accidents)
 :::
