--- a/docs/house/accidents.mdx
+++ b/docs/house/accidents.mdx
@@ -6,7 +6,7 @@ hide_title: true
 
 # Pet Accidents
 
-On occassion the pets (mostly CJ) may have an accident. 
+On occassion the pets may have an accident.
 
 We have a Green Machine carpet cleaner that you can use if you need to. It floats around the house, but is usually family room near the fireplace. There is already pet cleanup formula in there probably; there is more under a sink if needed. It is pretty easy to use, but if you have any questions, just ask!
 
@@ -15,4 +15,5 @@ We recommend picking up any solids first of course, then using the green machine
 Towels above the washer/dryer are dedicated to pets and their messes.
 
 :::info [Looking for Emergencies?](/docs/emergency)
+[Find all the vet info and things here](/docs/emergency)
 :::
