--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -2,7 +2,7 @@
 sidebar_label: About Olympia
 sidebar_position: 5
 tags:
- - Olympia
+  - Olympia
 hide_title: true
 ---
 
@@ -22,10 +22,9 @@ Not only does Olympia understand several words that we say, she also sometimes s
 - **No** - for stopping whatever she's doing
 - **Go to bed**/**bedzo** - Time to go to the bedroom for sleep
 
-
 ## Backyard
 
-Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She doesn't really bark at anything else back there when she's by herself. She will likely just lay in the sun for a while until she gets bored.
+Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She will likely just lay in the sun for a while until she gets bored.
 
 Ask Olympia inside by saying "Inside!"
 
@@ -33,15 +32,6 @@ Ask Olympia inside by saying "Inside!"
 
 While inside, Olympia follows around the humans and asks to go outside. Most often, while inside, she sleeps in a little ball near wherever you are.
 
-:::info Licking
-
-Try to stop her from licking the carpet and the couch. We aren't sure what the deal is but its gross.
-
-:::
-
-
 ## Sounds
 
-Olympia loves to speak. Asking for treats is most common but she sometimes does it when excited. 
-
-
+Olympia loves to speak. Asking for treats is most common but she sometimes does it when excited.
