--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -2,45 +2,30 @@
 sidebar_label: Routine
 sidebar_position: 2
 tags:
- - walking
- - walk
- - leash
- - hanging out
+  - walking
+  - walk
+  - leash
+  - hanging out
 hide_title: true
 ---
 
 # Routine
 
 ## Daytime
-Typical schedule for the dogs at our house (but is by no means a hard schedule): 
-- Bathroom at 8am, 12pm, 5pm, and 8pm. 
+
+Typical schedule for the dogs at our house (but is by no means a hard schedule):
+
+- Bathroom at 8am, 12pm, 5pm, and 8pm.
 - Party between 5pm and 8pm. Sleep the rest of the time
 
-
 ## Walking
-### Together
-Together, they are both ready to bark at other dogs (mostly Olympia but she will get CJ involved) and chase any cats. CJ can't keep up with the lengths Olympia would go, especially when its warm out.
 
-
-:::note Leashes
-We have a double leash that makes it easy to walk two dogs at once. Its black, and has a squishy handle. Hook this up to each dog's harness to keep them together nicely. Otherwise, the black lease with two handles is best for CJ while the purple leash (also a waste belt) is best for Olympia.
-
-Theres a loop in the front and back of the neck of their harness. We like to hook the leashes up to each dogs chest loop.
-
-:::
-
-
-### CJ
-CJ *LOVES* walking. It's his favorite thing. He loves to sniff all the things and mark everything he can while he's on a walk.
-CJ gets the red harness, and black leash (if not using the double lease).
-When he knows your intention is to walk him he gets a little crazy.
-Great to walk on his own. He's so friendly and looooooves sniffing things
-Pretty much guarenteed to poop while walking.
-
-:::warning 
-CJ has bitten people that have _not_ greeted us while they walk past. Not often, and not hard, but its scary enough.
-:::
-
-### Olympia
 Olympias harness is black. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
 When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk! She usually wants to go into the backyard to pee immediately after a walk if she didn't go while out.
+
+She always will stare at other dogs when she sees them until they bark. The e-collar has a beep that works well to get her back on track. 
+
+
+## In Public
+
+Olympia is very capable of going out in public. She is pretty well behaved but will definitely always stare at other dogs and contribute to bark-offs
