--- a/docs/pets/scout.mdx
+++ b/docs/pets/scout.mdx
@@ -2,13 +2,13 @@
 sidebar_label: About Scout
 sidebar_position: 6
 tags:
- - Scout
+  - Scout
 hide_title: true
 ---
 
 # Scout
 
-Scout is our little princess cat. She is pretty social, but usually shy around dogs, especially around dogs that she doesn't live with. 
+Scout is our little princess cat. She is pretty social, but usually shy around dogs, especially around dogs that she doesn't live with.
 
 :::important Scout is 100% an indoor cat
 
@@ -18,17 +18,28 @@ When the weather is nice, and given the opportunity, she will sneak out of the b
 
 ## Litterbox
 
-Scout's litterbox is in the small cupboard near the front door.
-Use the littergenie to dispose of her poops, or a trashbag. She will poop on the carpet if theres too much poop in the litterbox, and then she will blame the dogs for it. And then the dogs will clean it up for her. Just all bad things...
+Scout's litterbox is in the small cupboard near the garage.
+Use the litter-genie to dispose of her poops, or a trashbag. She will poop on the carpet if theres too much poop in the litterbox, and then she will blame the dogs for it. And then the dogs will clean it up for her. Just all bad things...
 
 ## Routine
 
-Most days Scoutie just lays around in her favorite spots and eats. She will bug you if she is hungry and she bites if she gets too many pets. 
+Most days Scoutie just lays around in her favorite spots and eats. She will bug you if she is hungry and she bites if she gets too many pets.
 
 ### Lounging
 
-Most of the time, she is found in her cat tree, or in the dining room, near to her food. 
+Most of the time, she is found in her cat tree, or in the dining room, near to her food.
 
-### Avoiding confrontation
+## Hiding places
 
-CJ, being his protective self, loves to keep Scoutie under control by breathing on her. Sometimes it's a bit much. Just ask him to stop if he's being mean. Scout will only come to really hang out on you if the dogs aren't able to, or if she's hungry and her food is empty
+There are a few common spots where you might find scout if she is "missing" in order of likelihood:
+
+- In a chair under the dining table
+- In an office chair
+- Family Room in front of the sliding door
+- Guest room bed
+- At the top of her cat tower
+- Office hammock
+- In the garage (if she has had the opportunity to sneak in there)
+- Middle bathroom bathtub
+- Under master bedroom bed
+- Under the truck (side backyard if she got out there)
