--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -1,23 +1,21 @@
 ---
 sidebar_label: Sleeping
 sidebar_position: 3
-tags: 
- - Bed
+tags:
+  - Bed
 hide_title: true
 ---
 
 # Nighttime with the pets
 
-
 ## Dogs
-Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. Feel free to put a gate in front of the doorway if you want to lock them up. They don't mind. There is a water bowl (that probably needs filling) in the master bathroom for them.
 
-:::note 
+Olympia will probably sleep in bed with you if you let her. Whatever you are comfortable with she will respect.
+
+:::note
 It could be beneficial to turn on the sound machine (white capsuly thing next to the bed) in the bedroom so they sleep better
 :::
 
 ## Scout
 
-We suspect that Scoutie attempts to sleep with our guests when we aren't home. We aren't really sure where she sleeps these days overnight. Let us know!
-
-
+We suspect that Scoutie attempts to sleep with our guests too when we aren't home. We aren't really sure where she sleeps these days overnight. Let us know!
