Add technology, hide all the blog posts

--- a/blog/2022-08.md
+++ b/blog/2022-08.md
@@ -3,6 +3,7 @@ slug: aug-2022
 title: Cj the borker
 authors: [mikey, tayler, olympia, scout]
 tags: [housesitting, cj]
+unlisted: true
 ---
 
 We notice CJ is barking more often in the backyard these days. Sometimes, he just stands out there and barks into the wind.
