--- a/blog/2022-10-03.mdx
+++ b/blog/2022-10-03.mdx
@@ -3,6 +3,7 @@ slug: oct-2022
 title: October 2022
 authors: [mikey, tayler, cj, olympia, scout]
 tags: [housesitting, poop, cj, olympia]
+unlisted: true
 ---
 
 Tayler and Mikey go to the East Coast for a wedding and visit NYC.
