--- a/blog/2024-04.md
+++ b/blog/2024-04.md
@@ -3,6 +3,7 @@ slug: apr-2024
 title: Cj the senior
 authors: [mikey, tayler, olympia, scout]
 tags: [housesitting, cj, food]
+unlisted: true
 ---
 
 CJ was pretty consistently having wet bowel movements so we switched him off of the kibble diet in favor of fresh foods. We originally were cooking chicken and rice for him regularly but that got very tedious so we switched over to a refrigerated food called PetFresh. Both of these solutions resolved the wet poop (we briefly tried to go back to processed foods but it didn't go well. )
