--- a/docs/human-care/technology.mdx
+++ b/docs/human-care/technology.mdx
@@ -7,7 +7,6 @@ import WifiQRCode, {WifiAsText} from '@site/src/components/WifiQRCode'
 
 
 
-
 # Technology
 
 We have all sorts of stuff connected to internet in the house!
@@ -42,6 +41,14 @@ There are 4 devices in the house:
 - Alexa, set an alarm for 8am.
 
 :::
+
+## Automations
+
+Some things that happen around the house:
+
+- Dining room light turns off at 11pm 
+- Front door locks (if its not already locked) at 11pm
+- Sprinklers turn on around 4am most mornings
 
 ## TV
 
