tiny updates before vacation

--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -24,7 +24,8 @@ Not only does Olympia understand several words that we say, she also sometimes s
 
 ## Backyard
 
-Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She will likely just lay in the sun for a while until she gets bored.
+Olympia is great in the backyard by herself, but can get into bark fights with the neigbhor's dog Tofu. 
+She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She will likely just lay in the sun for a while until she gets bored.
 
 Ask Olympia inside by saying "Inside!"
 
