--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -13,17 +13,18 @@ hide_title: true
 
 ## Daytime
 
-Typical schedule for the dogs at our house (but is by no means a hard schedule):
+Typical schedule for Olympia at our house (but is by no means a hard schedule):
 
-- Bathroom at 8am, 12pm, 5pm, and 8pm.
-- Party between 5pm and 8pm. Sleep the rest of the time
+- Bathroom at 8am, 12pm, 5pm, and 9pm.
+- Party between 5pm and 9pm. Sleep the rest of the time
 
 ## Walking
 
-Olympias harness is black. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
-When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk! She usually wants to go into the backyard to pee immediately after a walk if she didn't go while out.
+Olympias harness is black. We usually have an e-collar on her too that we recommend just to keep her attention when she gets roudy.
+When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk! 
+She usually wants to go into the backyard to pee immediately after a walk if she didn't go while out.
 
-She always will stare at other dogs when she sees them until they bark. The e-collar has a beep that works well to get her back on track. 
+She always will stare at other dogs when she sees them until they bark. The e-collar usually works well to get her back on track. 
 
 
 ## In Public
